version/0.16/_sources/api/solver/_autosummary/settings/setup.rst.txt
:orphan:

.. _setup:

setup
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.setup.setup
    :show-inheritance:

.. rubric:: Attributes

==================================================   ===================================

Attribute                                                                        Summary

==================================================   ===================================
:ref:`general <general>`                                                'general' child.

:ref:`models <models_1>`                                                 'models' child.

:ref:`materials <materials>`                                          'materials' child.

:ref:`cell_zone_conditions <cell_zone_conditions>`         'cell_zone_conditions' child.

:ref:`boundary_conditions <boundary_conditions>`            'boundary_conditions' child.

:ref:`reference_values <reference_values>`                     'reference_values' child.

:ref:`named_expressions <named_expressions>`                  'named_expressions' child.

:ref:`mesh_interfaces <mesh_interfaces>`                 Enter the mesh interfaces menu.

:ref:`geometry <geometry_3>`                                           'geometry' child.

:ref:`physics <physics>`                                                'physics' child.

:ref:`reference_frames <reference_frames>`                     'reference_frames' child.

==================================================   ===================================

.. rubric:: Included in:

==================   ==================

Parent                          Summary

==================   ==================
:ref:`root <root>`       'root' object.

==================   ==================

