version/0.25/_sources/api/solver/_autosummary/settings/setup.rst.txt
:orphan:

.. _setup:

setup
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.setup.setup
    :show-inheritance:

.. rubric:: Attributes

==================================================   =======================================================================================================================

Attribute                                                                                                                                                            Summary

==================================================   =======================================================================================================================
:ref:`general <general>`                                                                                                                                    'general' child.

:ref:`models <models_1>`                                                                                                                                     'models' child.

:ref:`materials <materials>`                                                                                                                              'materials' child.

:ref:`cell_zone_conditions <cell_zone_conditions>`                                                                                      Enter the cell zone conditions menu.

:ref:`boundary_conditions <boundary_conditions>`                                                                                         Enter the boundary conditions menu.

:ref:`mesh_interfaces <mesh_interfaces>`                                                                                                     Enter the mesh interfaces menu.

:ref:`reference_values <reference_values>`                                                                                                         'reference_values' child.

:ref:`reference_frames <reference_frames>`               Allows you to create local coordinate systems with a given position and orientation, either with or without motion.

:ref:`named_expressions <named_expressions>`                                                                                                      'named_expressions' child.

:ref:`turbo_models <turbo_models>`                                                                                                          Enter the turbo-models settings.

:ref:`geometry <geometry_5>`                                                                                                                               'geometry' child.

:ref:`physics <physics>`                                                                                                                                    'physics' child.

:ref:`profiles <profiles>`                                                                                                                             Profile display menu.

==================================================   =======================================================================================================================

.. rubric:: Included in:

==================   ==================

Parent                          Summary

==================   ==================
:ref:`root <root>`       'root' object.

==================   ==================

